--- a/.travis.yml
+++ b/.travis.yml
@@ -4,3 +4,9 @@ node_js:
   - "9"
   - "10"
   - "11"
+
+jobs:
+  include:
+    - stage: Produce Coverage
+      node_js: node
+      script: jest --coverage && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage
